<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diary_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:padding="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/diary_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/hygiene" />

    <TextView
        android:id="@+id/diary_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/diary_image"
        android:layout_marginStart="117dp"
        android:text="@string/header"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/diary_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/diary_heading"
        android:layout_centerVertical="true"
        android:text="@string/more_info"
        android:textColor="#000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/diary_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/diary_image"
        android:layout_alignStart="@+id/diary_heading"
        android:text="@string/total_usage"
        android:textColor="#000"
        android:textSize="17sp" />
</RelativeLayout>